force-app/main/default/objects/Referral_Comment__c/Referral_Comment__c.object-meta.xml
<CustomObject>
    <description>Object used to track comments and feedback on employee referrals throughout the hiring process.</description>
    <label>Referral Comment</label>
    <nameField>
        <displayFormat>CMT-{00000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>