force-app/main/default/objects/Referral_Comment__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <description>Categorizes the type of comment for better organization and filtering</description>
    <inlineHelpText>Select the category that best describes this comment</inlineHelpText>
    <label>Comment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Interview Feedback</fullName>
            </value>
            <value>
                <fullName>Status Update</fullName>
            </value>
            <value>
                <fullName>Internal Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>