force-app/main/default/objects/Referral_Comment__c/fields/Commented_By__c.field-meta.xml
<CustomField>
    <fullName>Commented_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who created this comment</description>
    <inlineHelpText>The person who wrote this comment</inlineHelpText>
    <label>Commented By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>