force-app/main/default/objects/Referral_Comment__c/fields/Employee_Referral__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral__c</fullName>
    <description>Links this comment to its parent Employee Referral record</description>
    <inlineHelpText>The referral this comment belongs to</inlineHelpText>
    <label>Employee Referral</label>
    <referenceTo>Employee_Referral__c</referenceTo>
    <relationshipLabel>Referral Comments</relationshipLabel>
    <relationshipName>Referral_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>