force-app/main/default/objects/Referral_Comment__c/fields/Is_Visible_To_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible_To_Employee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this comment should be visible to the referring employee</description>
    <inlineHelpText>Check this box to allow the referring employee to see this comment. Uncheck for internal-only comments.</inlineHelpText>
    <label>Is Visible To Employee</label>
    <type>Checkbox</type>
</CustomField>